Fix overlap issue with navbar dropdowns

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -165,7 +165,7 @@ body {
 	top: 100%;
 	left: 0;
 	width: 100%;
-	height: 2.3rem;
+	height: 2.2rem;
 	pointer-events: auto;
 }
 
@@ -174,7 +174,7 @@ body {
 	position: absolute;
 	top: 100%;
 	left: 50%;
-	transform: translate(-50%, 30%);
+	transform: translate(-50%, 29%);
 	z-index: 1000;
 	padding: 0;
 	list-style: none;
@@ -200,7 +200,7 @@ body {
 	position: absolute;
 	top: 100%;
 	left: 50%;
-	transform: translate(-50%, 40%);
+	transform: translate(-50%, 39%);
 	z-index: 1000;
 	padding: 0;
 	list-style: none;
